[tool.poetry]
name = "sopilot"
version = "0.1.0"
description = ""
authors = ["Hauzer S. Lee <nuffin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = {extras = ["security"], version = "^2.32.3"}
langchain = "^0.3.4"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.36"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
